added points with respective functions per segment